src/main/java/org/aksw/simba/cetus/parser/antlr4/CetusPatternsParser.java
// Generated from CetusPatterns.g4 by ANTLR 4.5
package org.aksw.simba.cetus.parser.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CetusPatternsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		ENTITY=1, AND=2, OR=3, BOTH=4, CC=5, OF=6, FORM_OF_BE=7, ADJECTIVE=8, 
		DETERMINER=9, NUMBER=10, NOUN=11, VERB=12, ADVERB=13, FOREIGN=14, POINT=15, 
		COMMA=16, COLON=17, WORD=18, WHITESPACE=19, CD=20;
	public static final int
		RULE_sentence = 0, RULE_entity_type_part = 1, RULE_type_after_entity_pattern = 2, 
		RULE_is_a_pattern = 3, RULE_is_a_type_of_pattern = 4, RULE_is_a_type_of_type_pattern = 5, 
		RULE_is_a_type_of_both_types_pattern = 6, RULE_type_in_front_of_entity = 7, 
		RULE_type_with_dt = 8, RULE_type = 9, RULE_nr = 10, RULE_cc_word = 11;
	public static final String[] ruleNames = {
		"sentence", "entity_type_part", "type_after_entity_pattern", "is_a_pattern", 
		"is_a_type_of_pattern", "is_a_type_of_type_pattern", "is_a_type_of_both_types_pattern", 
		"type_in_front_of_entity", "type_with_dt", "type", "nr", "cc_word"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'$ENTITY$'", "'and_and_CC'", "'or_or_CC'", "'both_both_CC'", null, 
		"'of_of_IN'", null, null, null, null, null, null, null, null, "'._._.'", 
		"',_,_,'", "':_:_:'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "ENTITY", "AND", "OR", "BOTH", "CC", "OF", "FORM_OF_BE", "ADJECTIVE", 
		"DETERMINER", "NUMBER", "NOUN", "VERB", "ADVERB", "FOREIGN", "POINT", 
		"COMMA", "COLON", "WORD", "WHITESPACE", "CD"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "CetusPatterns.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CetusPatternsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class SentenceContext extends ParserRuleContext {
		public Entity_type_partContext entity_type_part() {
			return getRuleContext(Entity_type_partContext.class,0);
		}
		public TerminalNode POINT() { return getToken(CetusPatternsParser.POINT, 0); }
		public List<TerminalNode> WORD() { return getTokens(CetusPatternsParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(CetusPatternsParser.WORD, i);
		}
		public List<Cc_wordContext> cc_word() {
			return getRuleContexts(Cc_wordContext.class);
		}
		public Cc_wordContext cc_word(int i) {
			return getRuleContext(Cc_wordContext.class,i);
		}
		public List<TerminalNode> OF() { return getTokens(CetusPatternsParser.OF); }
		public TerminalNode OF(int i) {
			return getToken(CetusPatternsParser.OF, i);
		}
		public List<TerminalNode> ADJECTIVE() { return getTokens(CetusPatternsParser.ADJECTIVE); }
		public TerminalNode ADJECTIVE(int i) {
			return getToken(CetusPatternsParser.ADJECTIVE, i);
		}
		public List<TerminalNode> DETERMINER() { return getTokens(CetusPatternsParser.DETERMINER); }
		public TerminalNode DETERMINER(int i) {
			return getToken(CetusPatternsParser.DETERMINER, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(CetusPatternsParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(CetusPatternsParser.NUMBER, i);
		}
		public List<TerminalNode> NOUN() { return getTokens(CetusPatternsParser.NOUN); }
		public TerminalNode NOUN(int i) {
			return getToken(CetusPatternsParser.NOUN, i);
		}
		public List<TerminalNode> FOREIGN() { return getTokens(CetusPatternsParser.FOREIGN); }
		public TerminalNode FOREIGN(int i) {
			return getToken(CetusPatternsParser.FOREIGN, i);
		}
		public List<TerminalNode> ADVERB() { return getTokens(CetusPatternsParser.ADVERB); }
		public TerminalNode ADVERB(int i) {
			return getToken(CetusPatternsParser.ADVERB, i);
		}
		public List<TerminalNode> VERB() { return getTokens(CetusPatternsParser.VERB); }
		public TerminalNode VERB(int i) {
			return getToken(CetusPatternsParser.VERB, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(CetusPatternsParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CetusPatternsParser.COMMA, i);
		}
		public List<TerminalNode> COLON() { return getTokens(CetusPatternsParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(CetusPatternsParser.COLON, i);
		}
		public SentenceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentence; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CetusPatternsVisitor ) return ((CetusPatternsVisitor<? extends T>)visitor).visitSentence(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SentenceContext sentence() throws RecognitionException {
		SentenceContext _localctx = new SentenceContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_sentence);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(33);
					switch (_input.LA(1)) {
					case WORD:
						{
						setState(24);
						match(WORD);
						}
						break;
					case AND:
					case OR:
					case BOTH:
					case CC:
						{
						setState(25);
						cc_word();
						}
						break;
					case OF:
						{
						setState(26);
						match(OF);
						}
						break;
					case ADJECTIVE:
						{
						setState(27);
						match(ADJECTIVE);
						}
						break;
					case DETERMINER:
						{
						setState(28);
						match(DETERMINER);
						}
						break;
					case NUMBER:
						{
						setState(29);
						match(NUMBER);
						}
						break;
					case NOUN:
						{
						setState(30);
						match(NOUN);
						}
						break;
					case FOREIGN:
						{
						setState(31);
						match(FOREIGN);
						}
						break;
					case ADVERB:
						{
						setState(32);
						match(ADVERB);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(37);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(38);
			entity_type_part();
			setState(53);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AND) | (1L << OR) | (1L << BOTH) | (1L << CC) | (1L << OF) | (1L << ADJECTIVE) | (1L << DETERMINER) | (1L << NUMBER) | (1L << NOUN) | (1L << VERB) | (1L << ADVERB) | (1L << FOREIGN) | (1L << COMMA) | (1L << COLON) | (1L << WORD))) != 0)) {
				{
				setState(51);
				switch (_input.LA(1)) {
				case WORD:
					{
					setState(39);
					match(WORD);
					}
					break;
				case AND:
				case OR:
				case BOTH:
				case CC:
					{
					setState(40);
					cc_word();
					}
					break;
				case OF:
					{
					setState(41);
					match(OF);
					}
					break;
				case ADJECTIVE:
					{
					setState(42);
					match(ADJECTIVE);
					}
					break;
				case DETERMINER:
					{
					setState(43);
					match(DETERMINER);
					}
					break;
				case NUMBER:
					{
					setState(44);
					match(NUMBER);
					}
					break;
				case NOUN:
					{
					setState(45);
					match(NOUN);
					}
					break;
				case VERB:
					{
					setState(46);
					match(VERB);
					}
					break;
				case FOREIGN:
					{
					setState(47);
					match(FOREIGN);
					}
					break;
				case ADVERB:
					{
					setState(48);
					match(ADVERB);
					}
					break;
				case COMMA:
					{
					setState(49);
					match(COMMA);
					}
					break;
				case COLON:
					{
					setState(50);
					match(COLON);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(56);
			match(POINT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Entity_type_partContext extends ParserRuleContext {
		public TerminalNode ENTITY() { return getToken(CetusPatternsParser.ENTITY, 0); }
		public Type_after_entity_patternContext type_after_entity_pattern() {
			return getRuleContext(Type_after_entity_patternContext.class,0);
		}
		public List<TerminalNode> COMMA() { return getTokens(CetusPatternsParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(CetusPatternsParser.COMMA, i);
		}
		public List<TerminalNode> WORD() { return getTokens(CetusPatternsParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(CetusPatternsParser.WORD, i);
		}
		public List<Cc_wordContext> cc_word() {
			return getRuleContexts(Cc_wordContext.class);
		}
		public Cc_wordContext cc_word(int i) {
			return getRuleContext(Cc_wordContext.class,i);
		}
		public List<TerminalNode> OF() { return getTokens(CetusPatternsParser.OF); }
		public TerminalNode OF(int i) {
			return getToken(CetusPatternsParser.OF, i);
		}
		public List<TerminalNode> ADJECTIVE() { return getTokens(CetusPatternsParser.ADJECTIVE); }
		public TerminalNode ADJECTIVE(int i) {
			return getToken(CetusPatternsParser.ADJECTIVE, i);
		}
		public List<TerminalNode> DETERMINER() { return getTokens(CetusPatternsParser.DETERMINER); }
		public TerminalNode DETERMINER(int i) {
			return getToken(CetusPatternsParser.DETERMINER, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(CetusPatternsParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(CetusPatternsParser.NUMBER, i);
		}
		public List<TerminalNode> NOUN() { return getTokens(CetusPatternsParser.NOUN); }
		public TerminalNode NOUN(int i) {
			return getToken(CetusPatternsParser.NOUN, i);
		}
		public List<TerminalNode> FOREIGN() { return getTokens(CetusPatternsParser.FOREIGN); }
		public TerminalNode FOREIGN(int i) {
			return getToken(CetusPatternsParser.FOREIGN, i);
		}
		public List<TerminalNode> ADVERB() { return getTokens(CetusPatternsParser.ADVERB); }
		public TerminalNode ADVERB(int i) {
			return getToken(CetusPatternsParser.ADVERB, i);
		}
		public List<TerminalNode> VERB() { return getTokens(CetusPatternsParser.VERB); }
		public TerminalNode VERB(int i) {
			return getToken(CetusPatternsParser.VERB, i);
		}
		public List<TerminalNode> FORM_OF_BE() { return getTokens(CetusPatternsParser.FORM_OF_BE); }
		public TerminalNode FORM_OF_BE(int i) {
			return getToken(CetusPatternsParser.FORM_OF_BE, i);
		}
		public Type_in_front_of_entityContext type_in_front_of_entity() {
			return getRuleContext(Type_in_front_of_entityContext.class,0);
		}
		public Entity_type_partContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entity_type_part; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CetusPatternsVisitor ) return ((CetusPatternsVisitor<? extends T>)visitor).visitEntity_type_part(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Entity_type_partContext entity_type_part() throws RecognitionException {
		Entity_type_partContext _localctx = new Entity_type_partContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_entity_type_part);
		int _la;
		try {
			int _alt;
			setState(154);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(58);
				match(ENTITY);
				setState(59);
				type_after_entity_pattern();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(60);
				match(ENTITY);
				setState(62);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(61);
					match(COMMA);
					}
				}

				setState(64);
				type_after_entity_pattern();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(65);
				match(ENTITY);
				setState(66);
				match(COMMA);
				setState(77); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					setState(77);
					switch (_input.LA(1)) {
					case WORD:
						{
						setState(67);
						match(WORD);
						}
						break;
					case AND:
					case OR:
					case BOTH:
					case CC:
						{
						setState(68);
						cc_word();
						}
						break;
					case OF:
						{
						setState(69);
						match(OF);
						}
						break;
					case ADJECTIVE:
						{
						setState(70);
						match(ADJECTIVE);
						}
						break;
					case DETERMINER:
						{
						setState(71);
						match(DETERMINER);
						}
						break;
					case NUMBER:
						{
						setState(72);
						match(NUMBER);
						}
						break;
					case NOUN:
						{
						setState(73);
						match(NOUN);
						}
						break;
					case FOREIGN:
						{
						setState(74);
						match(FOREIGN);
						}
						break;
					case ADVERB:
						{
						setState(75);
						match(ADVERB);
						}
						break;
					case VERB:
						{
						setState(76);
						match(VERB);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(79); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AND) | (1L << OR) | (1L << BOTH) | (1L << CC) | (1L << OF) | (1L << ADJECTIVE) | (1L << DETERMINER) | (1L << NUMBER) | (1L << NOUN) | (1L << VERB) | (1L << ADVERB) | (1L << FOREIGN) | (1L << WORD))) != 0) );
				setState(81);
				match(COMMA);
				setState(82);
				type_after_entity_pattern();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(83);
				match(ENTITY);
				setState(84);
				cc_word();
				setState(96);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						setState(94);
						switch (_input.LA(1)) {
						case WORD:
							{
							setState(85);
							match(WORD);
							}
							break;
						case AND:
						case OR:
						case BOTH:
						case CC:
							{
							setState(86);
							cc_word();
							}
							break;
						case OF:
							{
							setState(87);
							match(OF);
							}
							break;
						case ADJECTIVE:
							{
							setState(88);
							match(ADJECTIVE);
							}
							break;
						case DETERMINER:
							{
							setState(89);
							match(DETERMINER);
							}
							break;
						case NUMBER:
							{
							setState(90);
							match(NUMBER);
							}
							break;
						case NOUN:
							{
							setState(91);
							match(NOUN);
							}
							break;
						case FOREIGN:
							{
							setState(92);
							match(FOREIGN);
							}
							break;
						case ADVERB:
							{
							setState(93);
							match(ADVERB);
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						} 
					}
					setState(98);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
				}
				setState(99);
				type_after_entity_pattern();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(101);
				match(ENTITY);
				setState(102);
				cc_word();
				setState(114);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AND) | (1L << OR) | (1L << BOTH) | (1L << CC) | (1L << OF) | (1L << ADJECTIVE) | (1L << DETERMINER) | (1L << NUMBER) | (1L << NOUN) | (1L << ADVERB) | (1L << FOREIGN) | (1L << WORD))) != 0)) {
					{
					setState(112);
					switch (_input.LA(1)) {
					case WORD:
						{
						setState(103);
						match(WORD);
						}
						break;
					case AND:
					case OR:
					case BOTH:
					case CC:
						{
						setState(104);
						cc_word();
						}
						break;
					case OF:
						{
						setState(105);
						match(OF);
						}
						break;
					case ADJECTIVE:
						{
						setState(106);
						match(ADJECTIVE);
						}
						break;
					case DETERMINER:
						{
						setState(107);
						match(DETERMINER);
						}
						break;
					case NUMBER:
						{
						setState(108);
						match(NUMBER);
						}
						break;
					case NOUN:
						{
						setState(109);
						match(NOUN);
						}
						break;
					case FOREIGN:
						{
						setState(110);
						match(FOREIGN);
						}
						break;
					case ADVERB:
						{
						setState(111);
						match(ADVERB);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(116);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(117);
				match(COMMA);
				setState(129); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					setState(129);
					switch (_input.LA(1)) {
					case WORD:
						{
						setState(118);
						match(WORD);
						}
						break;
					case AND:
					case OR:
					case BOTH:
					case CC:
						{
						setState(119);
						cc_word();
						}
						break;
					case OF:
						{
						setState(120);
						match(OF);
						}
						break;
					case FORM_OF_BE:
						{
						setState(121);
						match(FORM_OF_BE);
						}
						break;
					case ADJECTIVE:
						{
						setState(122);
						match(ADJECTIVE);
						}
						break;
					case DETERMINER:
						{
						setState(123);
						match(DETERMINER);
						}
						break;
					case NUMBER:
						{
						setState(124);
						match(NUMBER);
						}
						break;
					case NOUN:
						{
						setState(125);
						match(NOUN);
						}
						break;
					case VERB:
						{
						setState(126);
						match(VERB);
						}
						break;
					case FOREIGN:
						{
						setState(127);
						match(FOREIGN);
						}
						break;
					case ADVERB:
						{
						setState(128);
						match(ADVERB);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					setState(131); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << AND) | (1L << OR) | (1L << BOTH) | (1L << CC) | (1L << OF) | (1L << FORM_OF_BE) | (1L << ADJECTIVE) | (1L << DETERMINER) | (1L << NUMBER) | (1L << NOUN) | (1L << VERB) | (1L << ADVERB) | (1L << FOREIGN) | (1L << WORD))) != 0) );
				setState(133);
				match(COMMA);
				setState(134);
				type_after_entity_pattern();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(136);
				type_in_front_of_entity();
				setState(137);
				match(ENTITY);
				setState(151);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						setState(149);
						switch (_input.LA(1)) {
						case WORD:
							{
							setState(138);
							match(WORD);
							}
							break;
						case AND:
						case OR:
						case BOTH:
						case CC:
							{
							setState(139);
							cc_word();
							}
							break;
						case OF:
							{
							setState(140);
							match(OF);
							}
							break;
						case ADJECTIVE:
							{
							setState(141);
							match(ADJECTIVE);
							}
							break;
						case DETERMINER:
							{
							setState(142);
							match(DETERMINER);
							}
							break;
						case NUMBER:
							{
							setState(143);
							match(NUMBER);
							}
							break;
						case NOUN:
							{
							setState(144);
							match(NOUN);
							}
							break;
						case FOREIGN:
							{
							setState(145);
							match(FOREIGN);
							}
							break;
						case ADVERB:
							{
							setState(146);
							match(ADVERB);
							}
							break;
						case FORM_OF_BE:
							{
							setState(147);
							match(FORM_OF_BE);
							}
							break;
						case VERB:
							{
							setState(148);
							match(VERB);
							}
							break;
						default:
							throw new NoViableAltException(this);
						}
						} 
					}
					setState(153);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Type_after_entity_patternContext extends ParserRuleContext {
		public Is_a_type_of_type_patternContext is_a_type_of_type_pattern() {
			return getRuleContext(Is_a_type_of_type_patternContext.class,0);
		}
		public Is_a_type_of_both_types_patternContext is_a_type_of_both_types_pattern() {
			return getRuleContext(Is_a_type_of_both_types_patternContext.class,0);
		}
		public Is_a_type_of_patternContext is_a_type_of_pattern() {
			return getRuleContext(Is_a_type_of_patternContext.class,0);
		}
		public List<Is_a_patternContext> is_a_pattern() {
			return getRuleContexts(Is_a_patternContext.class);
		}
		public Is_a_patternContext is_a_pattern(int i) {
			return getRuleContext(Is_a_patternContext.class,i);
		}
		public List<Cc_wordContext> cc_word() {
			return getRuleContexts(Cc_wordContext.class);
		}
		public Cc_wordContext cc_word(int i) {
			return getRuleContext(Cc_wordContext.class,i);
		}
		public Type_with_dtContext type_with_dt() {
			return getRuleContext(Type_with_dtContext.class,0);
		}
		public List<TerminalNode> WORD() { return getTokens(CetusPatternsParser.WORD); }
		public TerminalNode WORD(int i) {
			return getToken(CetusPatternsParser.WORD, i);
		}
		public List<TerminalNode> OF() { return getTokens(CetusPatternsParser.OF); }
		public TerminalNode OF(int i) {
			return getToken(CetusPatternsParser.OF, i);
		}
		public List<TerminalNode> ADJECTIVE() { return getTokens(CetusPatternsParser.ADJECTIVE); }
		public TerminalNode ADJECTIVE(int i) {
			return getToken(CetusPatternsParser.ADJECTIVE, i);
		}
		public List<TerminalNode> DETERMINER() { return getTokens(CetusPatternsParser.DETERMINER); }
		public TerminalNode DETERMINER(int i) {
			return getToken(CetusPatternsParser.DETERMINER, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(CetusPatternsParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(CetusPatternsParser.NUMBER, i);
		}
		public List<TerminalNode> NOUN() { return getTokens(CetusPatternsParser.NOUN); }
		public TerminalNode NOUN(int i) {
			return getToken(CetusPatternsParser.NOUN, i);
		}
		public List<TerminalNode> FOREIGN() { return getTokens(CetusPatternsParser.FOREIGN); }
		public TerminalNode FOREIGN(int i) {
			return getToken(CetusPatternsParser.FOREIGN, i);
		}
		public List<TerminalNode> ADVERB() { return getTokens(CetusPatternsParser.ADVERB); }
		public TerminalNode ADVERB(int i) {
			return getToken(CetusPatternsParser.ADVERB, i);
		}
		public List<TerminalNode> FORM_OF_BE() { return getTokens(CetusPatternsParser.FORM_OF_BE); }
		public TerminalNode FORM_OF_BE(int i) {
			return getToken(CetusPatternsParser.FORM_OF_BE, i);
		}
		public List<TerminalNode> VERB() { return getTokens(CetusPatternsParser.VERB); }
		public TerminalNode VERB(int i) {
			return getToken(CetusPatternsParser.VERB, i);
		}
		public Type_after_entity_patternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type_after_entity_pattern; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CetusPatternsVisitor ) return ((CetusPatternsVisitor<? extends T>)visitor).visitType_after_entity_pattern(this);
			else return visitor.visitChildren(this);
		}
	}
